исправил проблемы возникающие из-за паралельного запуска обработчиков. нужно еще исправить проблему возникающую при быстром переключении вкладок.

--- a/my_site/templates/research_work/index.html
+++ b/my_site/templates/research_work/index.html
@@ -1,6 +1,8 @@
 {% extends "shared/layout.html" %}
 {% load staticfiles %}
 
+{%block title%}Добро пожаловать!{%endblock title%}
+
 {%block main_page%}class="active"{%endblock main_page%}
 
 {% block content %}
@@ -43,7 +45,7 @@
                     очень хорошие результаты.
                 </div>
             </div>
-            <div class="panel panel-primary">
+            <div class="panel panel-warning">
                 <div class="panel-heading">Цель иследования</div>
                 <div class="panel-body">
                     В ходе моей квалификационной работы я попытаюсь написать систему способную отличать одних
