--- a/my_site/templates/chat/index.html
+++ b/my_site/templates/chat/index.html
@@ -1,6 +1,8 @@
 {% extends "shared/layout.html" %}
 {% load staticfiles %}
 
+{%block title%}Чат.{%endblock title%}
+
 {% block head %}
     <!--Чатик-->
     <script type="text/javascript" src="{% static 'scripts/chat.js' %}"></script>
@@ -20,7 +22,7 @@
                 </li>
                 <li class="list-group-item">
                     <a href="#" data-toggle="modal" data-target="#conferences-modal">
-                        <i class="glyphicon glyphicon-envelope"></i> Конференции <span class="badge" id="new-messages-count">42</span>
+                        <i class="glyphicon glyphicon-envelope"></i> Конференции <span class="badge" id="new-messages-count"></span>
                     </a>
                 </li>
             </ul>
